[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]

flatgeobuf = { version = "4.5.0", default-features = false, features = ["http"] }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.42.0", features = ["rt", "macros"] }

[patch.crates-io]

http-range-client = { git = "https://github.com/kylebarron/http-range-client", branch = "kyle/default-tls-feature" }
flatgeobuf = { git = "https://github.com/kylebarron/flatgeobuf", branch = "kyle/tls-options" }
